# polymarket-insider-ml

./: .gitignore  LICENSE  README.md  TODO.md  events_to_scrape.txt  pyproject.toml  requirements.txt
app/: app.py
notebooks/: 00_problem_definition.md  01_data_collection.ipynb  polymartket_insider_analysis.ipynb  top_holders.ipynb  top_positions.ipynb
polymarket_insider/: __init__.py  api.py  features.py  io.py  labeling.py  modeling.py  normalize.py  scraper.py
reports/tables/: advanced_metrics.csv  all_models_metrics.csv  association_rules.csv  association_rules_predict_suspicious.csv  baseline_metrics.csv  class_balance.csv  feature_correlation.csv  feature_summary.csv  gold_evaluation.csv  iso_forest_vs_heuristic.csv  rule_cooccurrence.csv  shap_importance.csv
scripts/: 02_label_dataset.py  03_eda.py  04_train_baselines.py  05_train_advanced.py  06_unsupervised_baseline.py  07_shap_analysis.py  08_association_rules.py  09_evaluate_vs_gold.py  smoke_test_online.py
tests/: conftest.py  test_smoke.py
