[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-insider"
version = "0.1.0"
description = "ML classification of suspicious trades on Polymarket."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Mikolaj Chrzanowski"}]

[tool.setuptools.packages.find]
include = ["polymarket_insider*"]
exclude = ["notebooks*", "data*", "reports*", "tests*", "app*"]
